--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
    </div>
 
-    <script src="script.js"></script>
-    <script src="config.js"></script>
+    <script type='text/javascript' src="config.js"></script>
+    <script type='text/javascript' src="script.js"></script>
 </body>
 </html>
